--- a/app/src/main/res/layout/fragment_pengumuman.xml
+++ b/app/src/main/res/layout/fragment_pengumuman.xml
@@ -11,32 +11,29 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:background="@drawable/main_header">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pengumuman"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
+            android:layout_gravity="center"
             android:layout_marginLeft="16dp"
-            android:layout_gravity="center">
-        </TextView>
+            android:text="Pengumuman"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold"></TextView>
     </LinearLayout>
     <!-- HEADER END -->
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/list_data"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:listitem="@layout/adapter_pengumuman">
-            </ListView>
-        </LinearLayout>
-    </ScrollView>
+            tools:listitem="@layout/adapter_pengumuman"></ListView>
+    </LinearLayout>
 
 </LinearLayout>
