--- a/app/src/main/res/layout/adapter_pengumuman.xml
+++ b/app/src/main/res/layout/adapter_pengumuman.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_marginTop="4dp">
+    android:paddingVertical="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
                 android:id="@+id/gambar"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@drawable/notif_ic_loker">
+                android:background="@drawable/notif_ic_info">
             </ImageView>
         </LinearLayout>
         <LinearLayout
