--- a/app/src/main/res/layout/fragment_pengumuman.xml
+++ b/app/src/main/res/layout/fragment_pengumuman.xml
@@ -24,16 +24,21 @@
     </LinearLayout>
     <!-- HEADER END -->
 
-    <LinearLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ListView
-            android:id="@+id/list_data"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/adapter_pengumuman"></ListView>
-    </LinearLayout>
+            android:orientation="vertical">
+            <ListView
+                android:id="@+id/list_data"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/adapter_pengumuman">
+            </ListView>
+        </LinearLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
