--- a/app/src/main/res/layout/activity_ubah_profile.xml
+++ b/app/src/main/res/layout/activity_ubah_profile.xml
@@ -221,6 +221,46 @@
                 android:inputType="text"
                 android:imeOptions="actionNext">
             </EditText>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:text="Kecamatan"
+                android:textSize="18sp"
+                android:textColor="#000"
+                android:textStyle="bold">
+            </TextView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="16dp">
+
+                <Spinner
+                    android:id="@+id/kecamatan"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></Spinner>
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:text="Desa"
+                android:textSize="18sp"
+                android:textColor="#000"
+                android:textStyle="bold">
+            </TextView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="16dp">
+
+                <Spinner
+                    android:id="@+id/desa"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></Spinner>
+            </LinearLayout>
             <!--Nomor Telepon-->
             <TextView
                 android:layout_width="wrap_content"
@@ -281,6 +321,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:hint="Tulis nama lembaga pendidikan"
+                android:textSize="16sp"
+                android:maxLength="30"
+                android:inputType="textCapWords"
+                android:imeOptions="actionNext">
+            </EditText>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:text="Jurusan"
+                android:textSize="18sp"
+                android:textColor="#000"
+                android:textStyle="bold">
+            </TextView>
+            <EditText
+                android:id="@+id/jurusan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:hint="Tulis jurusan yang Anda tempuh"
                 android:textSize="16sp"
                 android:maxLength="30"
                 android:inputType="textCapWords"
