--- a/app/src/main/res/layout/activity_ubah_profile.xml
+++ b/app/src/main/res/layout/activity_ubah_profile.xml
@@ -246,7 +246,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
-                android:text="Desa"
+                android:text="Desa/Kelurahan"
                 android:textSize="18sp"
                 android:textColor="#000"
                 android:textStyle="bold">
