--- a/app/src/main/res/layout/activity_kartu_ak1.xml
+++ b/app/src/main/res/layout/activity_kartu_ak1.xml
@@ -60,73 +60,79 @@
 <!--       </TextView>-->
 <!--   </LinearLayout>-->
 
-    <LinearLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/ly_footer"
         android:layout_below="@id/ly_header">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_above="@id/ly_footer"
+            android:layout_below="@id/ly_header">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="16dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Kartu AK1 yang dibuat akan tampil dibawah ini. Bagi yang ingin mengajaukan Kartu AK1 baru, silahkan klik tombol Buat Kartu AK1 dan tunggu verifikasi dari Dsinaker Jember"
+                        android:textSize="11sp"></TextView>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#FAFAFA"></View>
+
+                <ListView
+                    android:id="@+id/list_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="16dp"
+                    android:divider="#00FFFFFF"
+                    android:dividerHeight="5dp"
+                    tools:listitem="@layout/adapter_ak1"></ListView>
+            </LinearLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/ly_footer"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center">
+            <LinearLayout
+                android:id="@+id/btn_ak1"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginHorizontal="16dp"
+                android:background="@drawable/bt_red_round"
+                android:gravity="center">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Kartu AK1 yang dibuat akan tampil dibawah ini. Bagi yang ingin mengajaukan Kartu AK1 baru, silahkan klik tombol Buat Kartu AK1 dan tunggu verifikasi dari Dsinaker Jember"
-                    android:textSize="11sp"></TextView>
+                    android:text="Buat Kartu AK1"
+                    android:textAllCaps="false"
+                    android:textColor="#FFF"
+                    android:textStyle="bold">
+                </TextView>
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="8dp"
-                android:background="#FAFAFA"></View>
-
-            <ListView
-                android:id="@+id/list_data"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:divider="#00FFFFFF"
-                android:dividerHeight="5dp"
-                tools:listitem="@layout/adapter_ak1"></ListView>
-        </LinearLayout>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/ly_footer"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_alignParentBottom="true"
-        android:gravity="center">
-        <LinearLayout
-            android:id="@+id/btn_ak1"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_marginHorizontal="16dp"
-            android:background="@drawable/bt_red_round"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Buat Kartu AK1"
-                android:textAllCaps="false"
-                android:textColor="#FFF"
-                android:textStyle="bold">
-            </TextView>
-        </LinearLayout>
-    </RelativeLayout>
+        </RelativeLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
