--- a/app/src/main/res/layout/activity_detail_ak1.xml
+++ b/app/src/main/res/layout/activity_detail_ak1.xml
@@ -106,21 +106,32 @@
                 android:textColor="@color/black">
             </TextView>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5">
+            <TextView
+                android:id="@+id/nama_peserta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold">
+            </TextView>
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center_vertical|end">
-        <TextView
-            android:id="@+id/nama_peserta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold">
-        </TextView>
-    </LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginHorizontal="16dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:gravity="center_vertical|end">-->
+<!--        <TextView-->
+<!--            android:id="@+id/nama_peserta"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textStyle="bold">-->
+<!--        </TextView>-->
+<!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
