--- a/app/src/main/res/layout/activity_kartu_ak1.xml
+++ b/app/src/main/res/layout/activity_kartu_ak1.xml
@@ -60,14 +60,18 @@
 <!--       </TextView>-->
 <!--   </LinearLayout>-->
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/ly_header">
+        android:layout_below="@id/ly_header"
+        android:weightSum="10"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="9"
             android:layout_above="@id/ly_footer"
             android:layout_below="@id/ly_header">
 
@@ -101,7 +105,7 @@
                 <ListView
                     android:id="@+id/list_data"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="16dp"
                     android:divider="#00FFFFFF"
@@ -113,9 +117,12 @@
         <RelativeLayout
             android:id="@+id/ly_footer"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_alignParentBottom="true"
+            android:layout_marginVertical="15dp"
             android:gravity="center">
+
             <LinearLayout
                 android:id="@+id/btn_ak1"
                 android:layout_width="match_parent"
@@ -123,16 +130,16 @@
                 android:layout_marginHorizontal="16dp"
                 android:background="@drawable/bt_red_round"
                 android:gravity="center">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Buat Kartu AK1"
                     android:textAllCaps="false"
                     android:textColor="#FFF"
-                    android:textStyle="bold">
-                </TextView>
+                    android:textStyle="bold"></TextView>
             </LinearLayout>
         </RelativeLayout>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </RelativeLayout>
