--- a/app/src/main/res/layout/activity_penempatan.xml
+++ b/app/src/main/res/layout/activity_penempatan.xml
@@ -55,7 +55,7 @@
                 android:textStyle="bold">
             </TextView>
             <EditText
-                android:id="@+id/nama_lengkap"
+                android:id="@+id/tmp_penempatan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -77,13 +77,13 @@
                 android:textStyle="bold">
             </TextView>
             <LinearLayout
-                android:id="@+id/select_tgl_lahir"
+                android:id="@+id/select_tgl_penempatan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:orientation="vertical">
                 <TextView
-                    android:id="@+id/tgl_lahir"
+                    android:id="@+id/tgl_penempatan"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Format : 2022-12-31"
@@ -108,20 +108,36 @@
             </TextView>
 
             <LinearLayout
-                android:id="@+id/btn_upload"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:background="@drawable/bt_red_round"
-                android:paddingHorizontal="16dp">
-                <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:id="@+id/btn_browse_pdf"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Browse File"
-                    android:textColor="#FFF">
-                </TextView>
+                    android:layout_height="45dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center"
+                    android:background="@drawable/bt_red_round"
+                    android:paddingHorizontal="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Browse File"
+                        android:textColor="#FFF">
+                    </TextView>
+                </LinearLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/nama_file"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="16dp"
+                        android:layout_centerVertical="true">
+                    </TextView>
+                </RelativeLayout>
             </LinearLayout>
 
             <TextView
