--- a/app/src/main/res/layout/activity_detail_pengumuman.xml
+++ b/app/src/main/res/layout/activity_detail_pengumuman.xml
@@ -43,9 +43,9 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <ImageView
-                android:id="@+id/gambar_pengumuman"
+                android:id="@+id/gambar"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="200dp"
                 android:background="#EAEAEA">
             </ImageView>
             <TextView
@@ -53,10 +53,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="16dp"
-                android:text="Jenis Pengumuman">
+                >
             </TextView>
             <TextView
-                android:id="@+id/judul_voucher"
+                android:id="@+id/judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -74,18 +74,11 @@
                 android:weightSum="10"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/tanggal"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:text="Tanggal Pengumuman">
-                </TextView>
-                <TextView
-                    android:id="@+id/tgl_berlaku"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:textAlignment="textEnd"
-                    android:text="ambil tanggal created_at">
+                    android:layout_weight="10"
+                    android:text="">
                 </TextView>
             </LinearLayout>
             <View
@@ -106,7 +99,7 @@
                 android:textSize="16sp">
             </TextView>
             <TextView
-                android:id="@+id/deskripsi_voucher"
+                android:id="@+id/pengumuman"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -124,6 +117,7 @@
                 android:textSize="16sp">
             </TextView>
             <TextView
+                android:id="@+id/link"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
