--- a/app/src/main/res/layout/activity_pas_foto.xml
+++ b/app/src/main/res/layout/activity_pas_foto.xml
@@ -43,7 +43,7 @@
             android:id="@+id/img_pas_foto"
             android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:background="#00BABABA">
+            android:background="@drawable/default_img_tmp">
         </ImageView>
         <LinearLayout
             android:layout_width="match_parent"
@@ -97,6 +97,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_gravity="center">
 
         <ProgressBar
