--- a/app/src/main/res/layout/activity_ubah_profile.xml
+++ b/app/src/main/res/layout/activity_ubah_profile.xml
@@ -347,7 +347,7 @@
                 android:inputType="textCapWords"
                 android:imeOptions="actionNext">
             </EditText>
-            <!--Kata Sandi-->
+            <!--Tahun Lulus-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -366,7 +366,7 @@
                 android:hint="Tulis tahun lulus Anda"
                 android:textSize="16sp"
                 android:maxLength="30"
-                android:inputType="textCapWords"
+                android:inputType="number"
                 android:imeOptions="actionNext">
             </EditText>
             <!--Kata Sandi-->
@@ -375,7 +375,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
-                android:text="Tahun Lulus"
+                android:text="Kata Sandi"
                 android:textSize="18sp"
                 android:textColor="#000"
                 android:textStyle="bold">
@@ -410,6 +410,13 @@
                     </ImageView>
                 </LinearLayout>
             </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:text="* biarkan kosong apabila tidak ingin mengubah kata sandi"
+                android:textSize="9sp">
+            </TextView>
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_simpan"
                 android:layout_width="match_parent"
