--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -53,7 +53,7 @@
                             android:id="@+id/img_profil"
                             android:layout_width="90dp"
                             android:layout_height="100dp"
-                            android:background="#00FFFFFF">
+                            android:background="@drawable/default_img_tmp">
                         </ImageView>
                         <TextView
                             android:id="@+id/nama_lengkap"
