--- a/app/src/main/res/layout/activity_kartu_ak1.xml
+++ b/app/src/main/res/layout/activity_kartu_ak1.xml
@@ -36,9 +36,9 @@
     <!-- HEADER END -->
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/ly_header">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -118,6 +118,7 @@
                         android:textStyle="bold"></TextView>
                 </LinearLayout>
             </RelativeLayout>
+
         </LinearLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
