--- a/app/src/main/res/layout/activity_kartu_ak1.xml
+++ b/app/src/main/res/layout/activity_kartu_ak1.xml
@@ -36,6 +36,7 @@
     <!-- HEADER END -->
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/ly_header">
