--- a/app/src/main/res/layout/popup_img.xml
+++ b/app/src/main/res/layout/popup_img.xml
@@ -42,7 +42,7 @@
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
-                android:layout_height="350dp"></ImageView>
+                android:layout_height="wrap_content"></ImageView>
         </LinearLayout>
     </LinearLayout>
 
