--- a/app/src/main/res/layout/popup_update.xml
+++ b/app/src/main/res/layout/popup_update.xml
@@ -25,6 +25,7 @@
             </com.airbnb.lottie.LottieAnimationView>
 
             <TextView
+                android:id="@+id/keterangan_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
