--- a/app/src/main/res/layout/activity_detail_ak1.xml
+++ b/app/src/main/res/layout/activity_detail_ak1.xml
@@ -109,12 +109,14 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="5">
+            android:layout_weight="5"
+            android:gravity="center_vertical|end">
             <TextView
                 android:id="@+id/nama_peserta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold">
+                android:textStyle="bold"
+                android:text="123">
             </TextView>
         </LinearLayout>
     </LinearLayout>
