--- a/app/src/main/res/layout/popup_profil.xml
+++ b/app/src/main/res/layout/popup_profil.xml
@@ -43,7 +43,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nomor ID E-KAPEKA"
+                    android:text="KAPEKA.ID"
                     android:textStyle="bold"
                     android:textSize="20sp"
                     android:textColor="@color/tetriary">
@@ -128,6 +128,29 @@
         android:textSize="18sp"
         android:textStyle="bold">
     </TextView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:weightSum="2">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tanggal Dibuat :"
+            android:textColor="@color/black"></TextView>
+
+        <TextView
+            android:id="@+id/tgl_dibuat"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:text="24 Agustus 2024"
+            android:textColor="@color/black"></TextView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
