--- a/app/src/main/res/layout/activity_peminatan.xml
+++ b/app/src/main/res/layout/activity_peminatan.xml
@@ -61,7 +61,7 @@
                 android:textSize="16sp"
                 android:maxLength="16"
                 android:minLines="16"
-                android:inputType="number"
+                android:inputType="text"
                 android:imeOptions="actionNext">
             </EditText>
             <TextView
@@ -95,7 +95,7 @@
                 android:textStyle="bold">
             </TextView>
             <EditText
-                android:id="@+id/lokasi"
+                android:id="@+id/lokasi_kerja"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -103,7 +103,7 @@
                 android:textSize="16sp"
                 android:maxLength="16"
                 android:minLines="16"
-                android:inputType="number"
+                android:inputType="text"
                 android:imeOptions="actionNext">
             </EditText>
             <TextView
@@ -141,11 +141,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:hint="Jabatan/posisi yang diinginkan"
+                android:hint="Pelatihan yang diinginkan (Tidak Wajib)"
                 android:textSize="16sp"
                 android:maxLength="16"
                 android:minLines="16"
-                android:inputType="number"
+                android:inputType="text"
                 android:imeOptions="actionNext">
             </EditText>
             <androidx.appcompat.widget.AppCompatButton
